Name: Chart
Version: 0.7
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: http://www.dockerz.net/software/chart.html
Synopsis: A library for generating 2D Charts and Plots
Description: A library for generating 2D Charts and Plots, based upon the cairo graphics library.
Category: Graphics
Cabal-Version: >= 1.2
Build-Type: Simple

Extra-Source-Files: tests/test.hs, tests/Prices.hs

flag splitbase
  description: Choose the new smaller, split-up base package.

library
  if flag(splitbase)
    Build-depends: base >= 3, old-locale, old-time, mtl
  else
    Build-depends: base < 3
  Build-depends: gtk >= 0.9.11, cairo >= 0.9.11, mtl

  Exposed-modules:
        Graphics.Rendering.Chart,
        Graphics.Rendering.Chart.Gtk,
        Graphics.Rendering.Chart.Types,
        Graphics.Rendering.Chart.Renderable,
        Graphics.Rendering.Chart.Axis,
        Graphics.Rendering.Chart.Layout,
        Graphics.Rendering.Chart.Plot
        Graphics.Rendering.Chart.Simple

