Name: Chart
Version: 0.13
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2009
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: http://www.dockerz.net/software/chart.html
Synopsis: A library for generating 2D Charts and Plots
Description: A library for generating 2D Charts and Plots, based upon the cairo graphics library.
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

Extra-Source-Files:
     tests/all_tests.hs,
     tests/Test1.hs,
     tests/Test2.hs,
     tests/Test3.hs,
     tests/Test4.hs,
     tests/Test5.hs,
     tests/Test6.hs,
     tests/Test7.hs,
     tests/Test8.hs,
     tests/Test9.hs,
     tests/Test14.hs,
     tests/Test15.hs,
     tests/TestParametric.hs,     
     tests/Prices.hs

flag splitbase
  description: Choose the new smaller, split-up base package.

library
  if flag(splitbase)
    Build-depends: base >= 3 && < 5, old-locale, time, mtl, array
  else
    Build-depends: base < 3
  Build-depends: gtk >= 0.9.11, cairo >= 0.9.11, time, mtl, array, data-accessor == 0.2.*, 
                 data-accessor-template >= 0.2.1.1 && < 0.3, colour >= 2.2.1

  Exposed-modules:
        Graphics.Rendering.Chart,
        Graphics.Rendering.Chart.Gtk,
        Graphics.Rendering.Chart.Types,
        Graphics.Rendering.Chart.Renderable,
        Graphics.Rendering.Chart.Axis,
        Graphics.Rendering.Chart.Layout,
        Graphics.Rendering.Chart.Legend,
        Graphics.Rendering.Chart.Plot,
        Graphics.Rendering.Chart.Pie,
        Graphics.Rendering.Chart.Simple,
        Graphics.Rendering.Chart.Grid
        Graphics.Rendering.Chart.AreaSpots

