Name: Chart-cairo
Version: 1.0
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2010
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Cairo backend for Charts.
Description: Cairo backend for Charts.
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

library
  Build-depends: base >= 3 && < 5
               , old-locale
               , time, mtl, array
               , cairo >= 0.9.11
               , colour >= 2.2.1
               , data-default-class < 0.1
               , operational >= 0.2.2
               , Chart >= 1.0

  Exposed-modules:
        Graphics.Rendering.Chart.Backend.Cairo

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
