Name: Chart-cairo
Version: 1.9.4.1
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Cairo backend for Charts.
Description: Cairo backend for Charts.
Category: Graphics
Cabal-Version: 1.18
Build-Type: Simple

library
  default-language: Haskell98
  Build-depends: base >= 3 && < 5
               , array >= 0.5 && < 0.6
               , old-locale >= 1.0.0 && < 1.1
               , time >= 1.12 && < 1.13
               , cairo >= 0.9.11 && < 0.14
               , colour >= 2.2.1 && < 2.4
               , data-default-class < 0.2
               , operational >= 0.2.2 && < 0.3
               , lens >= 3.9 && < 5.3
               , Chart >= 1.9 && < 1.10
               , mtl >= 2.0 && < 2.4

  Exposed-modules:
        Graphics.Rendering.Chart.Backend.Cairo

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
