Name: Chart-gtk
Version: 0.17
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2010
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Utility functions for using the chart library with GTK
Description: Utility functions for using the chart library with GTK
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

flag splitbase
  description: Choose the new smaller, split-up base package.

library
  if flag(splitbase)
    Build-depends: base >= 3 && < 5, old-locale, time, mtl, array
  else
    Build-depends: base < 3
  Build-depends: cairo >= 0.9.11, time, mtl, array, data-accessor == 0.2.*, 
                 data-accessor-template >= 0.2.1.1 && < 0.3, colour >= 2.2.1,
                 gtk >= 0.9.11, Chart == 0.17

  Exposed-modules:
        Graphics.Rendering.Chart.Gtk
        Graphics.Rendering.Chart.Gtk.Simple

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
