Name: Chart-gtk
Version: 1.9.3
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Utility functions for using the chart library with GTK
Description: Utility functions for using the chart library with GTK
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

library
  Build-depends: base >= 3 && < 5
               , old-locale
               , time, mtl, array
               , cairo >= 0.9.11
               , data-default-class < 0.2
               , colour >= 2.2.1 && < 2.4
               , gtk >= 0.9.11
               , Chart >= 1.9 && < 1.10
               , Chart-cairo >= 1.9 && < 1.10

  Exposed-modules:
        Graphics.Rendering.Chart.Gtk

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
