Name: Chart-simple
Version: 1.2.2
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2010
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: A wrapper for the chart library to assist with basic plots
Description: A wrapper for the chart library to assist with basic plots
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

library
  Build-depends: base >= 3 && < 5
               , old-locale
               , time, mtl, array
               , data-default-class < 0.1
               , cairo >= 0.9.11
               , colour >= 2.2.1 && < 2.4
               , colour >= 2.2.1
               , gtk >= 0.9.11
               , Chart >= 1.2 && < 1.3
               , Chart-cairo >= 1.2 && < 1.3
               , Chart-gtk >= 1.2 && < 1.3

  Exposed-modules:
        Graphics.Rendering.Chart.Simple,
        Graphics.Rendering.Chart.Simple.Internal

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
