Name: Chart-tests
Version: 1.4
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Tests of the Charts library.
Description: Tests of the Charts library.
Category: Graphics
Cabal-Version: >= 1.10
Build-Type: Simple


source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart

Executable harness
    Build-Depends:
      base >= 3 && < 5,
      old-locale,
      array,
      time,
      mtl,
      colour          >= 2.2.1 && < 2.4,
      lens >= 3.9 && < 4.12,
      data-default-class < 0.1,
      bytestring      >= 0.9 && < 1.0,
      blaze-svg       >= 0.3.3,
      random          >= 1.0,
      containers      >= 0.4 && <0.6,
      old-time        >= 1.0,
      Chart           >= 1.3 && < 1.5,
      Chart-cairo     >= 1.3 && < 1.5,
      Chart-gtk       >= 1.3 && < 1.5,
      Chart-diagrams  >= 1.3 && < 1.5,
      gtk             >= 0.9.11,
      cairo           >= 0.9.11,
      lucid-svg       >= 0.4 && < 0.5,
      diagrams-cairo  >= 1.3 && < 1.4,
      diagrams-svg    >= 1.3 && < 1.4,
      diagrams-postscript    >= 1.3 && < 1.4,
      diagrams-lib    >= 1.3 && < 1.4,
      diagrams-core   >= 1.3 && < 1.4
  Main-is: Main.hs
  Hs-Source-Dirs: tests
  Ghc-Options: -threaded
  default-language:    Haskell2010
