Name: Chart-tests
Version: 1.8
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Tests of the Charts library.
Description: Tests of the Charts library.
Category: Graphics
Cabal-Version: >= 1.10
Build-Type: Simple


source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart

Executable chart-harness
    Build-Depends:
      base >= 3 && < 5,
      old-locale,
      array,
      time,
      mtl,
      colour          >= 2.2.1 && < 2.4,
      lens            >= 3.9 && < 4.15,
      data-default-class < 0.2,
      bytestring      >= 0.9 && < 1.0,
      svg-builder     >= 0.1 && < 0.2,
      random          >= 1.0,
      containers      >= 0.4 && <0.6,
      old-time        >= 1.0,
      Chart           >= 1.8 && < 1.9,
      Chart-cairo     >= 1.8 && < 1.9,
      Chart-gtk       >= 1.8 && < 1.9,
      Chart-diagrams  >= 1.8 && < 1.9,
      gtk             >= 0.9.11,
      cairo           >= 0.9.11,
      diagrams-cairo  >= 1.3 && < 1.4,
      diagrams-svg    >= 1.4 && < 1.5,
      diagrams-postscript    >= 0.7 && < 1.4,
      diagrams-lib    >= 1.2 && < 1.4,
      diagrams-core   >= 1.3 && < 1.4
  Main-is: Main.hs
  Hs-Source-Dirs: tests
  Ghc-Options: -threaded
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             Doctests.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest >= 0.8
  default-language:    Haskell2010
  Hs-Source-Dirs:      tests
