Name: ChartTests
Version: 0.17
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2010
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Tests of the Charts library.
Description: Tests of the Charts library.
Category: Graphics
Cabal-Version: >= 1.10
Build-Type: Simple

Extra-Source-Files:
     tests/all_tests.hs,
     tests/Test1.hs,
     tests/Test2.hs,
     tests/Test3.hs,
     tests/Test4.hs,
     tests/Test5.hs,
     tests/Test6.hs,
     tests/Test7.hs,
     tests/Test8.hs,
     tests/Test9.hs,
     tests/Test14.hs,
     tests/Test14a.hs,
     tests/Test15.hs,
     tests/Test17.hs,
     tests/TestParametric.hs,     
     tests/Prices.hs,
     tests/ExampleStocks.hs,
     tests/gtk/Prices.hs,
     tests/gtk/TestPicking.hs,
     tests/gtk/darcs_usage.hs

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart

flag splitbase
  description: Choose the new smaller, split-up base package.

Executable charts-test-cairo-all
  if flag(splitbase)
    Build-depends: base >= 3 && < 5, old-locale, time, mtl, array
  else
    Build-depends: base < 3
  Build-Depends:
       time, 
       mtl, 
       colour          >= 2.2.1,
       data-accessor   == 0.2.*,
       data-default    >= 0.5,
       random          >= 1.0,
       containers      >= 0.5,
       old-time        >= 1.0,
       Chart           >= 0.17,
       ChartCairo      >= 0.1
       
  Main-is: all_tests.hs
  Hs-Source-Dirs: tests
  Ghc-Options: -threaded
  default-language:    Haskell2010

Executable charts-test-gtk
  if flag(splitbase)
    Build-depends: base >= 3 && < 5, old-locale, time, mtl, array
  else
    Build-depends: base < 3
  Build-Depends: 
       time, 
       mtl, 
       colour          >= 2.2.1,
       data-accessor   == 0.2.*,
       data-default    >= 0.5,
       random          >= 1.0,
       containers      >= 0.5,
       old-time        >= 1.0,
       gtk             >= 0.9.11,
       cairo           >= 0.9.11,
       Chart           >= 0.17,
       Chart-gtk       >= 0.17,
       ChartCairo      >= 0.1
       
  Main-is: TestPicking.hs
  Hs-Source-Dirs: tests/gtk
  Ghc-Options: -threaded
  default-language:    Haskell2010