Name: Chart
Version: 0.15
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2010
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: http://www.dockerz.net/software/chart.html
Synopsis: A library for generating 2D Charts and Plots
Description: A library for generating 2D Charts and Plots, based upon the cairo graphics library.
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

Extra-Source-Files:
     tests/all_tests.hs,
     tests/Test1.hs,
     tests/Test2.hs,
     tests/Test3.hs,
     tests/Test4.hs,
     tests/Test5.hs,
     tests/Test6.hs,
     tests/Test7.hs,
     tests/Test8.hs,
     tests/Test9.hs,
     tests/Test14.hs,
     tests/Test14a.hs,
     tests/Test15.hs,
     tests/Test17.hs,
     tests/TestParametric.hs,     
     tests/Prices.hs
     tests/ExampleStocks.hs

flag splitbase
  description: Choose the new smaller, split-up base package.

library
  if flag(splitbase)
    Build-depends: base >= 3 && < 5, old-locale, time, mtl, array
  else
    Build-depends: base < 3
  Build-depends: cairo >= 0.9.11, time, mtl, array, data-accessor == 0.2.*, 
                 data-accessor-template >= 0.2.1.1 && < 0.3, colour >= 2.2.1

  Exposed-modules:
        Graphics.Rendering.Chart,
        Graphics.Rendering.Chart.Types,
        Graphics.Rendering.Chart.Renderable,
        Graphics.Rendering.Chart.Axis,
        Graphics.Rendering.Chart.Axis.Floating,
        Graphics.Rendering.Chart.Axis.Indexed,
        Graphics.Rendering.Chart.Axis.Int,
        Graphics.Rendering.Chart.Axis.LocalTime,
        Graphics.Rendering.Chart.Axis.Types,
        Graphics.Rendering.Chart.Axis.Unit,
        Graphics.Rendering.Chart.Layout,
        Graphics.Rendering.Chart.Legend,
        Graphics.Rendering.Chart.Simple,
        Graphics.Rendering.Chart.Simple.Internal,
        Graphics.Rendering.Chart.Grid,
        Graphics.Rendering.Chart.Plot,
        Graphics.Rendering.Chart.Plot.Types,
        Graphics.Rendering.Chart.Plot.Annotation,
        Graphics.Rendering.Chart.Plot.AreaSpots,
        Graphics.Rendering.Chart.Plot.Bars,
        Graphics.Rendering.Chart.Plot.Candle,
        Graphics.Rendering.Chart.Plot.ErrBars,
        Graphics.Rendering.Chart.Plot.FillBetween,
        Graphics.Rendering.Chart.Plot.Hidden,
        Graphics.Rendering.Chart.Plot.Lines,
        Graphics.Rendering.Chart.Plot.Pie,
        Graphics.Rendering.Chart.Plot.Points
