Name: Chart
Version: 1.9.3
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2006-2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: A library for generating 2D Charts and Plots
Description: A library for generating 2D Charts and Plots, with backends provided by
             Cairo (<http://hackage.haskell.org/package/Chart-cairo>)
             and
             Diagrams (<http://hackage.haskell.org/package/Chart-diagrams>).

             Documentation: https://github.com/timbod7/haskell-chart/wiki.
Category: Graphics
Cabal-Version: >= 1.6
Build-Type: Simple

library
  Build-depends: base >= 3 && < 5
               , old-locale
               , time, mtl, array
               , lens >= 3.9 && < 4.19
               , colour >= 2.2.1 && < 2.4
               , data-default-class < 0.2
               , mtl >= 2.0 && < 2.3
               , operational >= 0.2.2 && < 0.3
               , vector >=0.9 && <0.13

  if !impl(ghc >= 8.0)
    build-depends: semigroups >= 0.18.4 && <0.19


  Ghc-options: -Wall -fno-warn-orphans

  Exposed-modules:
        Graphics.Rendering.Chart,
        Graphics.Rendering.Chart.Drawing,
        Graphics.Rendering.Chart.Geometry,
        Graphics.Rendering.Chart.Utils,
        Graphics.Rendering.Chart.Renderable,
        Graphics.Rendering.Chart.Axis,
        Graphics.Rendering.Chart.Axis.Floating,
        Graphics.Rendering.Chart.Axis.Indexed,
        Graphics.Rendering.Chart.Axis.Int,
        Graphics.Rendering.Chart.Axis.Time,
        Graphics.Rendering.Chart.Axis.LocalTime,
        Graphics.Rendering.Chart.Axis.Types,
        Graphics.Rendering.Chart.Axis.Unit,
        Graphics.Rendering.Chart.Layout,
        Graphics.Rendering.Chart.Legend,
        Graphics.Rendering.Chart.Grid,
        Graphics.Rendering.Chart.Plot,
        Graphics.Rendering.Chart.Plot.Types,
        Graphics.Rendering.Chart.Plot.Annotation,
        Graphics.Rendering.Chart.Plot.AreaSpots,
        Graphics.Rendering.Chart.Plot.Bars,
        Graphics.Rendering.Chart.Plot.Candle,
        Graphics.Rendering.Chart.Plot.ErrBars,
        Graphics.Rendering.Chart.Plot.FillBetween,
        Graphics.Rendering.Chart.Plot.Hidden,
        Graphics.Rendering.Chart.Plot.Lines,
        Graphics.Rendering.Chart.Plot.Vectors,
        Graphics.Rendering.Chart.Plot.Pie,
        Graphics.Rendering.Chart.Plot.Points,
        Graphics.Rendering.Chart.Plot.Histogram
        Graphics.Rendering.Chart.SparkLine
        Graphics.Rendering.Chart.Backend
        Graphics.Rendering.Chart.Backend.Impl
        Graphics.Rendering.Chart.Backend.Types
        Graphics.Rendering.Chart.Easy
        Graphics.Rendering.Chart.State
        Numeric.Histogram
source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart
